--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<h1>Geham</h1>
-<button class="btn btn-danger ">hello</button>
-
-<h1>hell</h1>
-
-<button class="btn btn-primary"></button>
+<app-manage-emp></app-manage-emp>
