--- a/src/app/page/manage-emp/manage-emp.component.html
+++ b/src/app/page/manage-emp/manage-emp.component.html
@@ -1,6 +1,6 @@
-<div class="container m-5">
+<h1 class="title-add-employee text-center mb-4 p-4">Add Employee</h1>
 
-    <h1 class="title-1 text-center mb-4 p-4 text-white">Add Employee</h1>
+<div class="container m-5">
 
     <div class="input-group mb-3">
         <span class="input-group-text" id="basic-addon1"></span>
