--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <!-- <app-manage-emp></app-manage-emp> -->
 
-<app-view-all-employee></app-view-all-employee>
+<!-- <app-view-all-employee></app-view-all-employee> -->
+
+<router-outlet></router-outlet>
