--- a/src/app/page/view-all-employee/view-all-employee.component.html
+++ b/src/app/page/view-all-employee/view-all-employee.component.html
@@ -25,7 +25,14 @@
                 <td>{{employee.email}}</td>
                 <td>{{employee.departmentId}}</td>
                 <td>{{employee.roleId}}</td>
-                <td><button type="button" class="btn btn-danger" (click)="deleteEmployee(employee)"><i class="bi bi-trash3-fill"></i></button></td>
+                <td>
+                    <button type="button" class="btn btn-danger" (click)="deleteEmployee(employee)">
+                        <i class="bi bi-trash3-fill"></i>
+                    </button>
+                    <button type="button" class="btn btn-primary ms-2" (click)="deleteEmployee(employee)">
+                        <i class="bi bi-pencil-square"></i>
+                    </button>
+                </td>
             </tr>
         </tbody>
 
