--- a/src/app/page/manage-emp/manage-emp.component.css
+++ b/src/app/page/manage-emp/manage-emp.component.css
@@ -1,4 +1,6 @@
 .title-add-employee{
-    font-family: sans-serif; 
+    font-family: sans-serif;
+    background-color: rgb(213, 215, 220); 
+    font-weight: 600;
 }
 
