--- a/src/app/page/view-all-employee/view-all-employee.component.css
+++ b/src/app/page/view-all-employee/view-all-employee.component.css
@@ -1,3 +1,5 @@
-.title-view{
-    font-family: sans-serif; 
+.title-view-employees{
+    font-family: sans-serif;
+    background-color: rgb(213, 215, 220); 
+    font-weight: 600;
 }
