--- a/src/app/page/view-all-employee/view-all-employee.component.html
+++ b/src/app/page/view-all-employee/view-all-employee.component.html
@@ -1,6 +1,6 @@
 <app-nav></app-nav>
 
-<h1 class="title-view text-center mb-4 p-md-4">View All Employee</h1>
+<h1 class="title-view-employees text-center mb-4 p-4">View All Employee</h1>
 
 <div class="container">
 
@@ -35,8 +35,6 @@
                 </td>
             </tr>
         </tbody>
-
-
 
     </table>
 
