--- a/src/app/page/view-all-employee/view-all-employee.component.html
+++ b/src/app/page/view-all-employee/view-all-employee.component.html
@@ -29,7 +29,9 @@
                     <button type="button" class="btn btn-danger" (click)="deleteEmployee(employee)">
                         <i class="bi bi-trash3-fill"></i>
                     </button>
-                    <button type="button" class="btn btn-primary ms-2" (click)="deleteEmployee(employee)">
+
+                    <button type="button" class="btn btn-primary ms-2" data-bs-toggle="modal"
+                        data-bs-target="#exampleModal" (click)="updateEmployee(employee)">
                         <i class="bi bi-pencil-square"></i>
                     </button>
                 </td>
@@ -37,5 +39,51 @@
         </tbody>
 
     </table>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">New message</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+
+                    <div class="mb-3">
+                        <label for="recipient-name" class="col-form-label">ID:</label>
+                        <input type="text" class="form-control" id="recipient-name" disabled
+                            [(ngModel)]="selectedEmployee.id">
+                    </div>
+                    <div class="mb-3">
+                        <label for="recipient-name" class="col-form-label">First Name:</label>
+                        <input type="text" class="form-control" id="recipient-name" [(ngModel)]="selectedEmployee.firstName">
+                    </div>
+                    <div class="mb-3">
+                        <label for="recipient-name" class="col-form-label">Last Name:</label>
+                        <input type="text" class="form-control" id="recipient-name" [(ngModel)]="selectedEmployee.lastName">
+                    </div>
+                    <div class="mb-3">
+                        <label for="recipient-name" class="col-form-label">Email:</label>
+                        <input type="text" class="form-control" id="recipient-name"
+                            [(ngModel)]="selectedEmployee.email">
+                    </div>
+                    <div class="mb-3">
+                        <label for="recipient-name" class="col-form-label">Department:</label>
+                        <input type="text" class="form-control" id="recipient-name"
+                            [(ngModel)]="selectedEmployee.departmentId">
+                    </div>
+                    <div class="mb-3">
+                        <label for="recipient-name" class="col-form-label">Role:</label>
+                        <input type="text" class="form-control" id="recipient-name" [(ngModel)]="selectedEmployee.roleId">
+                    </div>
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-primary" (click)="saveUpdatedEmployee()">Update</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </div>
