--- a/src/app/page/view-all-employee/view-all-employee.component.html
+++ b/src/app/page/view-all-employee/view-all-employee.component.html
@@ -44,7 +44,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="exampleModalLabel">New message</h1>
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Employee Update Section</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -56,11 +56,13 @@
                     </div>
                     <div class="mb-3">
                         <label for="recipient-name" class="col-form-label">First Name:</label>
-                        <input type="text" class="form-control" id="recipient-name" [(ngModel)]="selectedEmployee.firstName">
+                        <input type="text" class="form-control" id="recipient-name"
+                            [(ngModel)]="selectedEmployee.firstName">
                     </div>
                     <div class="mb-3">
                         <label for="recipient-name" class="col-form-label">Last Name:</label>
-                        <input type="text" class="form-control" id="recipient-name" [(ngModel)]="selectedEmployee.lastName">
+                        <input type="text" class="form-control" id="recipient-name"
+                            [(ngModel)]="selectedEmployee.lastName">
                     </div>
                     <div class="mb-3">
                         <label for="recipient-name" class="col-form-label">Email:</label>
@@ -69,18 +71,57 @@
                     </div>
                     <div class="mb-3">
                         <label for="recipient-name" class="col-form-label">Department:</label>
-                        <input type="text" class="form-control" id="recipient-name"
+
+                        <select class="form-select" id="inputGroupSelect01" required
                             [(ngModel)]="selectedEmployee.departmentId">
+                            <option value="No Department">No Department</option>
+                            <option value="Product Development">Product Development</option>
+                            <option value="Project Management">Project Management</option>
+                            <option value="Sales and Marketing">Sales and Marketing</option>
+                            <option value="Customer Support">Customer Support</option>
+                            <option value="Human Resources">Human Resources</option>
+                            <option value="Finance and Accounting">Finance and Accounting</option>
+                            <option value="IT and Infrastructure">IT and Infrastructure</option>
+                            <option value="Legal and Compliance">Legal and Compliance</option>
+                            <option value="Administration and Operations">Administration and Operations</option>
+                            <option value="Product Management">Product Management</option>
+                        </select>
+
                     </div>
                     <div class="mb-3">
                         <label for="recipient-name" class="col-form-label">Role:</label>
-                        <input type="text" class="form-control" id="recipient-name" [(ngModel)]="selectedEmployee.roleId">
+
+                        <select class="form-select" id="inputGroupSelect01" required
+                            [(ngModel)]="selectedEmployee.roleId">
+                            <option value="No Role">No Role</option>
+                            <option value="Software Developer/Engineer">Software Developer/Engineer</option>
+                            <option value="Quality Assurance (QA)">Quality Assurance (QA)</option>
+                            <option value="User Experience (UX) Design">User Experience (UX) Design</option>
+                            <option value="Research and Development (R&D)">Research and Development (R&D)</option>
+                            <option value="Project Manager">Project Manager</option>
+                            <option value="Sales Manager">Sales Manager</option>
+                            <option value="Marketing Manager">Marketing Manager</option>
+                            <option value="Technical Support Specialist">Technical Support Specialist</option>
+                            <option value="Customer Support Representative">Customer Support Representative</option>
+                            <option value="HR Manager">HR Manager</option>
+                            <option value="Research and Development (R&D)">Research and Development (R&D)</option>
+                            <option value="Chief Financial Officer (CFO)">Chief Financial Officer (CFO)</option>
+                            <option value="Accountant">Accountant</option>
+                            <option value="IT Manager">IT Manager</option>
+                            <option value="IT Support Specialist">IT Support Specialist</option>
+                            <option value="Legal Counsel">Legal Counsel</option>
+                            <option value="Office Manager">Office Manager</option>
+                            <option value="Administrative Assistant">Administrative Assistant</option>
+                            <option value="Product Manager">Product Manager</option>
+                            <option value="Product Analyst">Product Analyst</option>
+                        </select>
                     </div>
 
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                    <button type="button" class="btn btn-primary" (click)="saveUpdatedEmployee()">Update</button>
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal"
+                        (click)="saveUpdatedEmployee()">Update</button>
                 </div>
             </div>
         </div>
