--- a/src/app/page/manage-emp/manage-emp.component.css
+++ b/src/app/page/manage-emp/manage-emp.component.css
@@ -1,10 +1,37 @@
-.title-add-employee{
-    font-family: sans-serif;
-    background-color: rgb(213, 215, 220); 
-    font-weight: 600;
+.title-add-employee {
+  font-family: sans-serif;
+  background-color: rgb(213, 215, 220);
+  font-weight: 600;
 }
 
-#add-emp-img{
-    max-width: 400px;
-    min-width: 250px;
+#add-emp-img {
+  max-width: 450px;
+  min-width: 250px;
+}
+
+
+.invalid-tooltip {
+  position: absolute;
+  top: -35px;
+  /* Position above the input box */
+  right: 0;
+  /* Align to the right corner of the input box */
+  background-color: #be515c;
+  /* Red background for error */
+  color: white;
+  padding: 5px 10px;
+  border-radius: 4px;
+  font-size: 0.875em;
+  z-index: 10;
+  /* Ensure it stays on top of other elements */
+}
+
+.input-group {
+  position: relative;
+  /* Make sure the tooltip is positioned relative to the input group */
+}
+
+
+#add-emp-p1 {
+  color: #50B498;
 }
