--- a/src/app/page/home-page/home-page.component.html
+++ b/src/app/page/home-page/home-page.component.html
@@ -7,11 +7,10 @@
                 width="700" height="500" loading="lazy">
         </div>
         <div class="col-lg-6">
-            <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Welcome to the Employee Management System!</h1>
+            <h1 class="display-5 fw-bold blue-tittle lh-1 mb-3">Welcome to the Employee Management System!</h1>
             <p class="lead">Your one-stop platform for managing and empowering your team. Get started today and discover
                 how easy it is to keep everything organized and running smoothly."</p>
             <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                <!-- <button type="button" class="btn btn-primary btn-lg px-4 me-md-2">Primary</button> -->
                 <button type="button" class="btn btn-outline-secondary btn-lg px-4">
                     <a href="#features" style="text-decoration: none; color: inherit;">Features</a>
                 </button>
@@ -25,12 +24,11 @@
 
     <div class="row row-cols-1 row-cols-md-2 align-items-md-center g-5 py-5">
         <div class="col d-flex flex-column align-items-start gap-2">
-            <h2 class="fw-bold text-body-emphasis">Effortless Employee Management</h2>
+            <h2 class="fw-bold blue-tittle">Effortless Employee Management</h2>
             <p class="text-body-secondary">Our Employee Management System makes it easy to manage your team. You can
                 effortlessly add new employees, update their details, and remove those who are no longer with the
                 company. The intuitive interface also allows you to view and filter employee information quickly,
                 ensuring you have all the details you need at your fingertips.</p>
-            <!-- <a href="#" class="btn btn-primary btn-lg">Primary button</a> -->
         </div>
 
         <div class="col">
