--- a/src/app/page/manage-emp/manage-emp.component.css
+++ b/src/app/page/manage-emp/manage-emp.component.css
@@ -1,37 +1,38 @@
 .title-add-employee {
   font-family: sans-serif;
+  color: #2A629A;
   background-color: rgb(213, 215, 220);
   font-weight: 600;
 }
 
 #add-emp-img {
   max-width: 450px;
-  min-width: 250px;
+  min-width: 250px;filter:
+  drop-shadow(5px 5px 10px #476098);
 }
 
 
 .invalid-tooltip {
   position: absolute;
   top: -35px;
-  /* Position above the input box */
   right: 0;
-  /* Align to the right corner of the input box */
   background-color: #be515c;
-  /* Red background for error */
   color: white;
   padding: 5px 10px;
   border-radius: 4px;
   font-size: 0.875em;
   z-index: 10;
-  /* Ensure it stays on top of other elements */
 }
 
 .input-group {
   position: relative;
-  /* Make sure the tooltip is positioned relative to the input group */
 }
-
 
 #add-emp-p1 {
   color: #50B498;
+}
+
+.btn{
+  color: white;
+  background-color: #222831;
 }
